MicrocomputerArchitectureWebsite/styles.css
@font-face {
    font-family: Pixemex;
    src: url(fonts/joystix.otf);
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

/* Basic Reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    image-rendering: pixelated;
    font-size: 8px;
}

body {
    font-family: Pixemex, Arial, sans-serif;
    line-height: 1.6;
    background: #ecccaa;
    height: 100vh;
    overflow: hidden;
}


/* Header */
header {
    background: transparent;
    padding: 1em 2em;
    display: flex;
    align-items: flex-start;
    justify-content: center;
    position: sticky;
    width: 100%;
    top: 0;
    z-index: 10;
    font-size: clamp(1rem, 5rem, 12rem); /* Dynamically adjust font size */
    height: clamp(1rem, 5rem, 12rem);
    padding-bottom: 10vh;
}

.home header{
    position: fixed;

}

header nav ul {
    list-style: none;
    display: flex;
}

header nav ul li {
    margin: 0 2vw;
}

header nav ul li a {
    text-decoration: none;
    color: #6D321D;
    font-size: clamp(1rem, 2vw, 12rem);
    transition: color 0.3s ease, font-size 0.3s ease;
}

header nav ul li a:hover {
    color: #ffde59;
}

.hamburger {
    display: none;
}

.menu-toggle:checked + .hamburger {
    animation: spin 0.5s ease-in-out;
}

.menu-toggle {
    display: none; /* Hide the checkbox */
}

.menu-toggle:checked + label + ul {
    display: flex;
    transform: translateX(0); /* Slide-in from the right */
}

/* Parallax Container */
.parallax-container {
    position: relative;
    height: 100vh;
    width: 100%;
    overflow: visible;
    display: flex;
    justify-items: center;
    
}

.parallax-layer {
    position: absolute;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
    transition: transform 0.1s ease-out;
}

/* Background Layers */
#phallus {
    background-image: url(images/HomepageMascotSprites/spaced/ComputyDefaultBSpng.png);
    z-index: 2;
    transition: transform 2s ease, background-image 0s ease;

}

#keyboard {
    background-image: url(images/HomepageMascotSprites/spaced/ComputyKeyboardCentered.png);
    z-index: 1;
    transition: transform 2s ease, background-image 0s ease;
}

#phallus.zoomed {
    transform: translateX(10%) translateY(-50%) scale(9);
    background-image: url(images/HomepageMascotSprites/spaced/ComputyNoScreenBS.png);

}

#phallus.slide {
    transform: translate(-100%);
}

#phallus.starting {
    z-index: 900;
    position: relative;
    transform: translateX(10%) translateY(-50%) scale(9);
    background-image: url(images/HomepageMascotSprites/spaced/ComputyNoScreenBS.png);
}

#desk {
    background-image: url(images/HomepageBackground/HomepageTableAndwindow.png);
    z-index: 1;
}

#tree_left_back {
    background-image: url('images/HomepageBackground/HomepageBackgroundTreesLEFTSIDE.png');
    z-index: -4;
}

#tree_left_front {
    background-image: url('images/HomepageBackground/HomepageFrontalTreesLEFTSIDE.png');
    z-index: -2;
}

#tree_right_back {
    background-image: url('images/HomepageBackground/HomepageBackgroundTreesRIGHTSIDE.png');
    z-index: -3;
}

#tree_right_front {
    background-image: url('images/HomepageBackground/HomepageFrontalTreesRIGHTSIDE.png');
    z-index: -1;
}

/* Mute Button */
#mute-button {
    position: fixed;
    bottom: 1em;
    right: 1em;
    width: clamp(1em, 5vw, 20em);
    height: auto;
    cursor: pointer;
    z-index: 1000;
}

/* Pop-up */
.popup {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 1000;
    background-color: #4e5836;
}

.popup-content {
    padding: 2em;
    border-radius: 1em;
    text-align: center;
    max-width: 50vw;
    
}

.popup-content p {
    font-size: clamp(1rem, 1vw , 12rem);
    margin-bottom: 1.5vh;
    color: #a4cc44;
}

#popup-ok {
    padding: 1em 2em;
    cursor: pointer;
    background-color:#a4cc44;
    color: #4e5836;
    border: none;
    transition: background-color 0.3s ease;
    font-size: clamp(1rem, 1vw , 12rem);
    font-family: Pixemex;
}

#popup-ok:hover {
    background-color: #ffde59;
}

/* Components Page */
.components-page {
    background-color: #4e5836;
    color: #a4cc44;
}

.components-page ::-webkit-scrollbar {
    width: 1vw;  /* Increased the width for better visibility */
    height: 1vw; /* Set height for horizontal scrollbar */
}

.components-page ::-webkit-scrollbar-thumb {
    background-color: #a4cc44;  /* Color of the scrollbar thumb */
}

.components-page nav ul li a {
    color: #a4cc44;
}

.components-page header {
    position: static;
}

/* Layout for the components container */
.components {
    
    display: grid;
    grid-template-columns: 1fr 3fr; /* Links on the left, content on the right */
    gap: 2em;
    padding: 2em;
    margin:4vh 3vw;
    margin-top: calc(1em + clamp(1rem, 5rem, 12rem)) ;
    border: solid;
    margin-bottom: 1vh;
    max-height: 80vh;
}

/* Sidebar for links */
.component-links {
    padding: 3em;
    grid-column: 1;
    display: flex;
    flex-direction: column;
    gap: 1em;
    position: static;
    overflow: auto;
}

/* Styling for the links */
.component-links h1 a {
    text-decoration: none;
    color: inherit;
    font-size: clamp(1rem, 2vw, 12rem);
    
}

.component-links h1 a:hover {
    color: #ffde59;
}

/* Content section (text + image) */
.content {
    white-space: normal;
    grid-column: 2;
    position: relative;
    display: none; /* Hide all sections by default */
    visibility: hidden;
    opacity: 0;
    height: 0;
    transition: opacity 0.3s ease-in-out;
    border-left: solid;
    max-height: 80vh;
    min-height: 50vh;
    overflow: auto;
    padding-right: 4vw;
    padding-left: 2vw;
    padding-top: 4vh;
    padding-bottom: 4vh;
    min-height: 30vh;
    height: auto;
}

/* Text content styling */
.content p {
    font-size: clamp(1rem, 1vw, 12rem);
    order: 2;
    flex: 1 1 50%;
    margin-top: 1em;
}


/* Wrapping text around the image */
.content img {
    max-width: 30%; /* Control image size */
    width: 20%;
    height: auto;
    object-fit: cover;
    order: 1; /* Ensures the image comes first */
    float: right;
    margin-left: 1em;
    margin-bottom: 1em;
}

/* Show only the targeted content */
:target {
    display: block;
    visibility: visible;
    opacity: 1;
    clear: both;

}

/* show cpu if body not present */
body:not(:has(:target)) #intro {
    display: block;
    visibility: visible;
    opacity: 1;
    clear: both;
}

.directory p{
    font-size: clamp(1rem, 1.5vw, 12rem);
}

.directory ul {
    list-style-type: none; /* Ensures bullets are removed */
    padding: 0; /* Removes default padding */
    margin: 0; /* Removes default margin */
}

.directory li {
    margin-left: 3em; /* Adds the desired left margin */
}

.directory a {
    text-decoration: none;
    color: #a4cc44;
    font-size: clamp(1rem, 1vw, 12rem);
}

.directory a:hover {
    color: #ffde59;
}

/* about page */

.about-page {
    overflow: auto;
}

.about-page header {
    background-color:#6d321d23;
    position: relative ;

}

.about-page header nav {
    padding: 1em;
}

.about-page header nav ul{
    padding: 1em;
}

.about-page .parallax-container {
    position: fixed;
    z-index: 0;
}

.bios {
    z-index: 9;
    overflow: auto;
    position: relative;
    background-color:#6d321d23;
}

.bio {
    z-index: 300;
    display: flex;
    align-items: center;
    gap: 1em;
    margin-bottom: 2em;
    margin-top: 3vh;
    padding: 10vw;
}

.bio p{
    z-index: 300;
    font-size: clamp(1rem, 0.75vw, 12rem);
    flex-grow: 1;
}

.bio h1 {
    font-size: clamp(1rem, 2vw, 12rem);
    flex-grow: 2;
}

.bio img {
    width: clamp(12px, 30vw, 1080px);
    height: auto;
    object-fit:contain;
    
}

.bio-left {
    flex-direction: row;
}

.bio-right {
    flex-direction: row-reverse;

    color:#fffaf4;
}

#kenzi {
    background-color: #43ffff48;
}

#ivan {
    background-color: #6d321d9f;
}

#xymex {
    background-color: #462d6e5d;
}


.bio div {
    max-width: 60%;
}

.bios a {
    text-decoration: none;
    font-size: inherit;
    color: inherit;
}

.bios a:hover{
    color: #ffde59 ;

}


/* Hamburger and Responsive Menu */
@media (max-width: 768px) {

    .hamburger {
        display: block;
        cursor: pointer;
        font-size: clamp(3rem, 4vw, 10rem);
        color: #6D321D;
        position: absolute;
        top: 1vh;
        right: 2vw;
        z-index: 101;
    }

    .components-page .hamburger {
        color: #a4cc44;
    }

    header {
        justify-content: flex-end;
    }

    header nav ul {
        display: none;  /* Initially hidden */
        flex-direction: column;
        position: fixed;
        top: 0;
        right: 0;   /* Align to the right side */
        width: 60vw;  /* Width of the sidebar */
        height: 100vh; /* Full screen height */
        background-color: rgba(255, 255, 255, 0.63); /* Semi-transparent background */
        padding: 1em;
        z-index: 100;
        box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.2);  /* Adjust shadow for right-side */
        transform: translateX(100%); /* Hide off-screen initially on the right side */
        transition: transform 0.3s ease-in-out; /* Smooth slide-in transition */
    }

    .components-page header nav ul {
        background-color: rgba(44, 44, 44, 0.603);
    }

    header nav ul.show {
        display: flex;
        transform: translateX(0);
    }

    header nav ul li {
        margin: 1em 0;
        padding: 1em;
    }

    header nav ul li a {
        font-size: clamp(1rem, 5vw, 12rem);
        transition: color 0.3s ease, font-size 0.3s ease;
    }

    .components {
        grid-template-columns: 1fr;
    }

    .component-links {
        flex-direction: row;
        flex-wrap: wrap;
        overflow-x: auto;
    }

    .component-links h1 {
        flex-grow: 1;
    }

    .content img {
        float: none;
        display: block;
        margin: 1em auto;
        max-width: 100%;
    }

    .content {
        grid-column: 1;
        border-left: 0;
        border-top: solid;
    }

    .content p {
        padding-left: 0;
    }


    .bio {
        flex-direction: column !important;
        align-items: center;
        text-align: center;
    }

    .bio img {
        width: 100%;
        max-width: 300px;
    }

    .bio div {
        max-width: 100%;
    }
}

